--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "firebase": "^7.2.2",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
